// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onSubmit options 1`] = `
Object {
  "Constructor": "Form",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "directives": Object {
      "onsubmit": [Function],
      "ref": [Function],
    },
    "types": Array [],
  },
  "html": "
<form>
  <input placeholder=\\"(a &amp;&amp; b) || (!a &amp;&amp; !b)\\" tabindex=\\"1\\" id=\\"input-text\\" name=\\"expression\\">
  <!--Input-->
  <button type=\\"submit\\" tabindex=\\"2\\">Simplify!</button>
</form>
",
}
`;

exports[`onSubmit props 1`] = `
Object {
  "Constructor": "Form",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "directives": Object {
      "onsubmit": [Function],
      "ref": [Function],
    },
    "types": Array [],
  },
  "html": "
<form>
  <input placeholder=\\"(a &amp;&amp; b) || (!a &amp;&amp; !b)\\" tabindex=\\"1\\" id=\\"input-text\\" name=\\"expression\\">
  <!--Input-->
  <button type=\\"submit\\" tabindex=\\"2\\">Simplify!</button>
</form>
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Constructor": "Form",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "directives": Object {
      "onsubmit": [Function],
      "ref": [Function],
    },
    "onSubmit": [Function],
    "types": Array [],
  },
  "html": "
<form>
  <input placeholder=\\"(a &amp;&amp; b) || (!a &amp;&amp; !b)\\" tabindex=\\"1\\" id=\\"input-text\\" name=\\"expression\\">
  <!--Input-->
  <button type=\\"submit\\" tabindex=\\"2\\">Simplify!</button>
</form>
",
}
`;
